# Synergy_Python_Stack_1

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/lesson_10/: task_1.py  task_2.py  task_description.md
src/lesson_11/: task_1.py  task_description.md
src/lesson_11/task_2/: cli.py  main.py  pet.py  pet_registry.py
src/lesson_13/: task_1.py  task_description.md
src/lesson_14/: task_1.py  task_description.md
src/lesson_15/: task_1.py  task_2.py  task_description.md
src/lesson_16/: task_1.py  task_2.py  task_description.md
src/lesson_23/: clouds.py  helicopter.py  main.py  map.py  task_description.md  utils.py
src/lesson_3/: task_1.py  task_2.py  task_description.md
src/lesson_3_input_output_basic_variables/: task_1.py
src/lesson_4/: task_1.py  task_2.py  task_description.md
src/lesson_5/: task_1.py  task_2.py  task_3.py  task_description.md
src/lesson_6/: task_1.py  task_2.py  task_3.py  task_description.md
src/lesson_7/: task_1.py  task_2.py  task_description.md
src/lesson_8/: task_1.py  task_2.py  task_3.py  task_description.md
src/lesson_9/: task_1.py  task_2.py  task_3.py  task_description.md
tests/tests_lesson_10/: cases.py  test_task_1.py  test_task_2.py
tests/tests_lesson_11/tests_task_1/: cases.py  test_task_1.py
tests/tests_lesson_11/tests_task_2/: conftest.py
tests/tests_lesson_11/tests_task_2/test_cli/: test_create.py  test_delete.py  test_help.py  test_read.py  test_read_all.py  test_stop.py  test_update.py
tests/tests_lesson_13/: test_add.py  test_generate.py  test_multiply.py  test_print.py
tests/tests_lesson_14/: test_task_1.py
tests/tests_lesson_15/: test_task_1.py  test_task_2.py
tests/tests_lesson_16/: test_task_1.py  test_task_2.py
tests/tests_lesson_3/: cases.py  test_task_1.py  test_task_2.py
tests/tests_lesson_4/: cases.py  test_task_1.py  test_task_2.py
tests/tests_lesson_5/: cases.py  test_task_1.py  test_task_2.py  test_task_3.py
tests/tests_lesson_6/: cases.py  test_task_1.py  test_task_2.py  test_task_3.py
tests/tests_lesson_7/: cases.py  test_task_1.py  test_task_2.py
tests/tests_lesson_8/: cases.py  test_task_1.py  test_task_2.py  test_task_3.py
tests/tests_lesson_9/: cases.py  test_task_1.py  test_task_2.py  test_task_3.py
(+7 files in other folders)
