[project]
name = "synergy-python-stack-1"
version = "0.1.0"
requires-python = ">=3.13"
description = "Практические задания по дисциплине Стек технологий Python."
readme = "README.md"
authors = [
    {name = "Резаков Валентин Алексеевич, группа ОБОз-42509МОрпо"},
]
dependencies = []

# ===== RUFF =====
[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "S",
    "TCH",
    "RUF",
    "Q",
    "SIM",
]

ignore = [
    "S311",
    "S314",
    "TC001",
    "E501",
    "B905",
    "RUF001",
    "RUF002",
    "RUF003",
]

fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = [
    "F403",
    "F405"
]

"tests/**/*.py" = [
    "ARG001",
    "S101",
]

# ===== PYTEST =====
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
"--strict-markers",
]
